--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,10 @@
 [project]
 name = "nonstd"
-version = "0.1.0"
+version = "0.1.1"
 description = "Useful python modules with sensible APIs"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.13"
 dependencies = []
 
-[tool.pytest.ini_options]
-addopts = [
-    "--import-mode=importlib",
-]
+[dependency-groups]
+dev = ["pyright", "pytest", "ruff"]
